--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -290,7 +290,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-
+    implementation project(':@react-native-async-storage') 
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
