--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,6 +26,9 @@ buildscript {
         mavenCentral()
     }
     dependencies {
+        //  implementation project(':@react-native-async-storage')
+
+        // implementation project(':react-native-splash-screen')
         classpath('com.android.tools.build:gradle:7.1.1')
         classpath('com.facebook.react:react-native-gradle-plugin')
         classpath('de.undercouch:gradle-download-task:5.0.1')
