--- a/package.json
+++ b/package.json
@@ -9,20 +9,36 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-navigation/drawer": "^6.4.4",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "@rpldy/native-uploady": "^1.0.1",
     "expo": "~46.0.8",
     "expo-splash-screen": "~0.16.1",
+    "expo-sqlite-orm": "^1.6.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.4",
+    "react-native-document-picker": "^8.1.1",
+    "react-native-gesture-handler": "^2.5.0",
+    "react-native-image-picker": "^4.9.0",
+    "react-native-material-menu": "^2.0.0",
+    "react-native-popup-menu": "^0.15.13",
+    "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.16.0",
     "react-native-shadow-cards": "1.0.2",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-sqlite-orm": "^1.0.0",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
-    "react-navigation": "^4.4.4"
+    "react-navigation": "^4.4.4",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
